@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.44 2004/01/22 08:36:04 grant Exp $
+# $NetBSD: Makefile,v 1.45 2004/01/28 15:41:07 xtraeme Exp $
 #
 
 DISTNAME=		xmame-0.78.1
 PKGNAME=		xmess-0.78.1
+PKGREVISION=		1
 CATEGORIES=		emulators games x11
 MASTER_SITES=		http://x.mame.net/download/
 EXTRACT_SUFX=		.tar.bz2
@@ -17,7 +18,7 @@ NO_BIN_ON_CDROM=	${RESTRICTED}
 
 USE_BUILDLINK2=		YES
 USE_PKGINSTALL=		YES
-USE_X11BASE=		YES
+USE_X11=		YES
 USE_GNU_TOOLS+=		make
 MAKEFILE=		makefile.unix
 TARGET=			${PKGBASE}
